--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-sidenav",
+  "name": "@sidv93/react-sidenav",
   "version": "1.0.0",
   "description": "",
   "author": "sidv93",
@@ -20,6 +20,9 @@
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
